--- a/index.html
+++ b/index.html
@@ -11,98 +11,98 @@
       <ul class="cards">
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img1.png" alt="card-img">
+            <img src="img1.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img2.png" alt="card-img">
+            <img src="img2.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img3.png" alt="card-img">
+            <img src="img3.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img4.png" alt="card-img">
+            <img src="img4.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img5.png" alt="card-img">
+            <img src="img5.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img6.png" alt="card-img">
+            <img src="img6.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img5.png" alt="card-img">
+            <img src="img5.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img6.png" alt="card-img">
+            <img src="img6.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img1.png" alt="card-img">
+            <img src="img1.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img2.png" alt="card-img">
+            <img src="img2.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img3.png" alt="card-img">
+            <img src="img3.png" alt="card-img">
           </div>
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="images/que_icon.svg" alt="icon">
+            <img src="que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img4.png" alt="card-img">
+            <img src="img4.png" alt="card-img">
           </div>
         </li>
         <div class="details">
